(CDAP-15715) Refactor scattered logic into URIScheme enum